--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.21",
+    "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.9"
   }
 }
